# entrega_tc_2_grupo_14

./: .env  .gitignore  Dockerfile  README  compose.yaml  dvc.yaml  pyproject.toml  test.ps1
.dvc/: config
artifacts/: .gitignore
configs/: settings.py
models/: model.py
scripts/: check_fuction_length.py  validate_env.py
src/: classes.py  predict.py  preprocessing.py  train.py
